--- a/Power BI Proj SC FS BM/Data clean.ipynb
+++ b/Power BI Proj SC FS BM/Data clean.ipynb
@@ -1258,6 +1258,27 @@
     "r7_avg_sale_disc_filters = results[7]\n",
     "r8_avg_disc_per_saleP = results[8]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Internal Parts'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"\"\"INTERNAL PARTS\"\"\"\n",
+    "\" \".join([t.capitalize() for t in text.split()])"
+   ]
   }
  ],
  "metadata": {
