--- a/Power BI Proj SC FS BM/27 03 25/process.ipynb
+++ b/Power BI Proj SC FS BM/27 03 25/process.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25905fa6",
+   "execution_count": 1,
+   "id": "074736ab",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23-04-2025 1.52 PM\n",
-      "Elapsed time: 2.9853 seconds\n"
+      "27-03-2025 2.32 PM\n",
+      "Elapsed time: 0.8109 seconds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Siva\\AppData\\Local\\Temp\\ipykernel_13268\\2268712939.py:108: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\Siva\\AppData\\Local\\Temp\\ipykernel_9832\\917087947.py:108: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  deduped_df = df.groupby(group_cols, as_index=False).apply(merge_price_history).reset_index(drop=True)\n"
      ]
     }
@@ -30,7 +30,7 @@
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "file = \"5 years MARKDOWN REPORT.txt\"\n",
+    "file = \"08 MARKDOWN REPORT.txt\"\n",
     "flag = False\n",
     "data = []\n",
     "df = pd.DataFrame(columns=[\n",
@@ -97,7 +97,7 @@
     "            _z = (line.strip()).split(\"  \")\n",
     "            z = [i.strip() for i in _z if i]\n",
     "            soh = int(z[1])\n",
-    "            if soh > 0:\n",
+    "            if soh:\n",
     "                (colour,price) = (z[0],z[-1])\n",
     "                data.append((department, markdown_id, markdown_description, date, style_code, description, colour, price,soh))\n",
     "                # print(data)\n",
@@ -146,22 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b602c38f",
+   "execution_count": 2,
+   "id": "5e063541",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 1.4790 seconds\n"
+      "Elapsed time: 0.0948 seconds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Siva\\AppData\\Local\\Temp\\ipykernel_10580\\3034256980.py:70: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\Siva\\AppData\\Local\\Temp\\ipykernel_9832\\3814367164.py:70: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda g: {\n"
      ]
     }
@@ -193,7 +193,7 @@
     "flag = False\n",
     "current = {}\n",
     "\n",
-    "with open(\"5 years MARKDOWN REPORT.txt\", encoding=\"utf-8\") as f:\n",
+    "with open(\"08 MARKDOWN REPORT.txt\", encoding=\"utf-8\") as f:\n",
     "    for line in f:\n",
     "        line = line.rstrip(\"\\n\")\n",
     "        if line.startswith(\"Markdown:\"):\n",
@@ -218,13 +218,13 @@
     "        elif flag and soh_re.match(line):\n",
     "            parts = [p.strip() for p in line.split(\"  \") if p.strip()]\n",
     "            colour, soh, price = parts[0], int(parts[1]), float(parts[-1])\n",
-    "            \n",
-    "            rows.append({\n",
-    "                **current,\n",
-    "                \"colour\": colour,\n",
-    "                \"soh\": soh,\n",
-    "                \"price\": price\n",
-    "            })\n",
+    "            if soh:\n",
+    "                rows.append({\n",
+    "                    **current,\n",
+    "                    \"colour\": colour,\n",
+    "                    \"soh\": soh,\n",
+    "                    \"price\": price\n",
+    "                })\n",
     "        elif date_re.match(line):\n",
     "            ts = line.rsplit(\" \", 1)[0]\n",
     "            time_stamp = ts.replace(\"/\", \"-\").replace(\":\", \".\")\n",
@@ -254,9 +254,83 @@
     "    .sort_values([\"style_code\", \"colour\"])\n",
     ")\n",
     "\n",
-    "deduped.to_csv(f\"Markdown {time_stamp.strip()} all.csv\", index=False)\n",
+    "# print(time_stamp.strip())\n",
+    "deduped.to_csv(f\"Markdown {time_stamp.strip()}.csv\", index=False)\n",
     "\n",
     "print(f\"Elapsed time: {time.perf_counter() - start:.4f} seconds\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "741914ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  sales_person                                 retail_$_incl_disc   discount  \\\n",
+      "0               ______________________________________________...        NaN   \n",
+      "1    Alejandra                                             134.99       0.00   \n",
+      "2        Alice                                             231.98     -50.00   \n",
+      "3         Amal                                             381.97     -26.00   \n",
+      "4       Amanda                                          57,239.91  10,199.23   \n",
+      "\n",
+      "     returns      net_$ avg_sale_units avg_sale_$ %_store_total  \n",
+      "0        NaN        NaN            NaN        NaN           NaN  \n",
+      "1    -134.99       0.00           1.00     134.99         0.00%  \n",
+      "2    -381.97    -149.99           0.67      77.33         0.01%  \n",
+      "3    -237.98     143.99           1.50     190.99         0.01%  \n",
+      "4  -3,265.24  53,974.67           1.67     173.98         1.66%  \n",
+      "Elapsed time: 0.204 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from collections import deque\n",
+    "import pandas as pd\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
+    "df_attributes = [\n",
+    "    'sales_person',\n",
+    "    'retail_$_incl_disc',\n",
+    "    'discount',\n",
+    "    'returns',\n",
+    "    'net_$',\n",
+    "    'avg_sale_units',\n",
+    "    'avg_sale_$',\n",
+    "    '%_store_total'\n",
+    "]\n",
+    "df = pd.DataFrame(columns=df_attributes)\n",
+    "buffer = deque()\n",
+    "\n",
+    "with open(\"01 SALES PERFORMANCE REPORT Inc GST calc on Retail.txt\", encoding=\"utf-8\") as f:\n",
+    "    # skip header\n",
+    "    for _ in range(9):\n",
+    "        next(f)\n",
+    "\n",
+    "    for line in f:\n",
+    "        buffer.append(line)\n",
+    "        if len(buffer) > 6:\n",
+    "            data = buffer.popleft().rstrip(\"\\n\").split()\n",
+    "\n",
+    "            # if the line split into more than 8 parts, \n",
+    "            # then the sales_person has spaces\n",
+    "            if len(data) != len(df_attributes):\n",
+    "                # everything except the last 7 tokens is the name\n",
+    "                name = \" \".join(data[:-7])\n",
+    "                rest = data[-7:]\n",
+    "                data = [name] + rest\n",
+    "\n",
+    "            # now data is exactly 8 items\n",
+    "            row = dict(zip(df_attributes, data))\n",
+    "            df.loc[len(df)] = row\n",
+    "\n",
+    "print(df.head())\n",
+    "print(f\"Elapsed time: {time.perf_counter() - start:.3f} seconds\")\n"
    ]
   }
  ],
