--- a/Markdown report/bdm.ipynb
+++ b/Markdown report/bdm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "25905fa6",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23-04-2025 1.52 PM\n",
-      "Elapsed time: 2.9853 seconds\n"
+      "16-05-2025 4.52 PM\n",
+      "Elapsed time: 4.3147 seconds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Siva\\AppData\\Local\\Temp\\ipykernel_13268\\2268712939.py:108: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\Siva\\AppData\\Local\\Temp\\ipykernel_9736\\4226683254.py:108: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  deduped_df = df.groupby(group_cols, as_index=False).apply(merge_price_history).reset_index(drop=True)\n"
      ]
     }
@@ -30,7 +30,7 @@
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "file = \"5 years MARKDOWN REPORT.txt\"\n",
+    "file = \"MARKDOWN REPORT 16 05 25.txt\"\n",
     "flag = False\n",
     "data = []\n",
     "df = pd.DataFrame(columns=[\n",
