--- a/Power BI Proj SC FS BM/25 06 13/processing files.ipynb
+++ b/Power BI Proj SC FS BM/25 06 13/processing files.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b554e9a8",
    "metadata": {},
    "outputs": [
@@ -18,14 +18,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 2.0943 seconds\n"
+      "Elapsed time: 9.7441 seconds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_13504\\1650280142.py:71: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_9172\\1650280142.py:71: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda g: {\n"
      ]
     }
@@ -719,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
