--- a/Power BI Proj SC FS BM/25 06 13/processing files.ipynb
+++ b/Power BI Proj SC FS BM/25 06 13/processing files.ipynb
@@ -5,7 +5,7 @@
    "id": "bd636318",
    "metadata": {},
    "source": [
-    "Markdown report"
+    "Markdown report - Done"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "id": "890b67ee",
    "metadata": {},
    "source": [
-    "Daily Sales Summary Report"
+    "Daily Sales Summary Report - Done"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "id": "88de8fe3",
    "metadata": {},
    "source": [
-    "Sales By Customer Report"
+    "Sales By Customer Report - Done"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "id": "10fe6baa",
    "metadata": {},
    "source": [
-    "Sales By Sub Department Report"
+    "Sales By Sub Department Report - Done"
    ]
   },
   {
@@ -505,7 +505,7 @@
    "id": "cc0cabc9",
    "metadata": {},
    "source": [
-    "Stock Refill Report"
+    "Stock Refill Report - Done"
    ]
   },
   {
@@ -561,7 +561,7 @@
    "id": "f350fa4d",
    "metadata": {},
    "source": [
-    "Tender Breakdown Detail Report"
+    "Tender Breakdown Detail Report - Done"
    ]
   },
   {
@@ -641,12 +641,12 @@
    "id": "ccbc69b8",
    "metadata": {},
    "source": [
-    "Tender Breakdown Summary Report"
+    "Tender Breakdown Summary Report - Done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ccb8c46c",
    "metadata": {},
    "outputs": [
@@ -666,10 +666,6 @@
     "import pandas as pd\n",
     "\n",
     "price_re = re.compile(r\"\\.\\d{2}\\s*$\")\n",
-    "\n",
-    "# day = None\n",
-    "# date = None\n",
-    "# tender = None\n",
     "\n",
     "df_attributes = ['day', 'date', 'tender', 'value']\n",
     "rows = []\n",
