--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "80d1799f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "fa52b73e",
    "metadata": {},
    "outputs": [
@@ -26,38 +26,128 @@
       "✅ Loaded 16 reports successfully.\n",
       "Matched pattern: SALES\\s+PERFORMANCE\\s+REPORT\\s+Including\\s+GST.*Retail\\s*\\$\n",
       "Processing: Sales Performance (Incl. GST on Retail $)\n",
-      "None\n",
+      "    sales_person  retail_$_incl_disc  discount  returns     net_$  \\\n",
+      "0      Alejandra              134.99      0.00  -134.99      0.00   \n",
+      "1          Alice              231.98    -50.00  -381.97   -149.99   \n",
+      "2           Amal              381.97    -26.00  -237.98    143.99   \n",
+      "3         Amanda            57239.91  10199.23 -3265.24  53974.67   \n",
+      "4          Amber                0.00    -50.00  -199.99   -199.99   \n",
+      "..           ...                 ...       ...      ...       ...   \n",
+      "145      Valeria                0.00      0.00  -189.00   -189.00   \n",
+      "146     Victoria             2407.32    904.42   -74.99   2332.33   \n",
+      "147    Wendy Ann            18843.52   3883.40  -829.43  18014.09   \n",
+      "148        Yifan              127.49    -42.50  -127.49      0.00   \n",
+      "149          Zoe                0.00     -9.00   -80.99    -80.99   \n",
+      "\n",
+      "     avg_sale_units  avg_sale_$  %_store_total  \n",
+      "0              1.00      134.99           0.00  \n",
+      "1              0.67       77.33           0.01  \n",
+      "2              1.50      190.99           0.01  \n",
+      "3              1.67      173.98           1.66  \n",
+      "4              0.00        0.00           0.00  \n",
+      "..              ...         ...            ...  \n",
+      "145            0.00        0.00           0.00  \n",
+      "146            1.93      160.49           0.07  \n",
+      "147            1.45      138.56           0.55  \n",
+      "148            1.00      127.49           0.00  \n",
+      "149            0.00        0.00           0.00  \n",
+      "\n",
+      "[150 rows x 8 columns]\n",
       "Matched pattern: SALES\\s+PERFORMANCE\\s+REPORT\\s+Excluding\\s+GST.*Retail\\s*\\$\n",
       "Processing: Sales Performance (Excl. GST on Retail $)\n",
-      "None\n",
+      "    sales_person  retail_$_incl_disc  discount  returns     net_$  \\\n",
+      "0      Alejandra              122.71      0.00  -122.71      0.00   \n",
+      "1          Alice              210.90    -45.45  -347.26   -136.36   \n",
+      "2           Amal              347.25    -23.63  -216.36    130.89   \n",
+      "3         Amanda            52036.54   9271.91 -2968.41  49068.13   \n",
+      "4          Amber                0.00    -45.45  -181.81   -181.81   \n",
+      "..           ...                 ...       ...      ...       ...   \n",
+      "145      Valeria                0.00      0.00  -171.81   -171.81   \n",
+      "146     Victoria             2188.48    822.19   -68.17   2120.31   \n",
+      "147    Wendy Ann            17130.60   3530.28  -754.03  16376.57   \n",
+      "148        Yifan              115.90    -38.64  -115.90      0.00   \n",
+      "149          Zoe                0.00     -8.18   -73.63    -73.63   \n",
+      "\n",
+      "     avg_sale_units  avg_sale_$  %_store_total  \n",
+      "0              1.00      122.71           0.00  \n",
+      "1              0.67       70.30           0.01  \n",
+      "2              1.50      173.63           0.01  \n",
+      "3              1.67      158.17           1.66  \n",
+      "4              0.00        0.00           0.00  \n",
+      "..              ...         ...            ...  \n",
+      "145            0.00        0.00           0.00  \n",
+      "146            1.93      145.90           0.07  \n",
+      "147            1.45      125.96           0.55  \n",
+      "148            1.00      115.90           0.00  \n",
+      "149            0.00        0.00           0.00  \n",
+      "\n",
+      "[150 rows x 8 columns]\n",
       "Matched pattern: SALES\\s+PERFORMANCE\\s+REPORT\\s+Including\\s+Tax.*Net\\s*\\$\n",
       "Processing: Sales Performance (Incl. Tax on Net $)\n",
-      "None\n",
+      "            sales_person  retail_$_after_disc  discount  returns     net_$  \\\n",
+      "0    Alejandra Rodriguez               134.99      0.00   134.99      0.00   \n",
+      "1            Alice Deady               231.98     46.36   381.97   -149.99   \n",
+      "2           Amal Hammoud               241.98    106.37    97.99    143.99   \n",
+      "3          Amanda Durham             56932.43   9395.42  2957.76  53974.67   \n",
+      "4            Amber Uther                 0.00    -45.45   199.99   -199.99   \n",
+      "..                   ...                  ...       ...      ...       ...   \n",
+      "145         Valeria Hrda                 0.00     36.36   189.00   -189.00   \n",
+      "146  Victoria Sokolowska              2407.32    822.19    74.99   2332.33   \n",
+      "147     Wendy Ann Manalo             18843.52   3530.28   829.43  18014.09   \n",
+      "148            Yifan Zhu               127.49      0.00   127.49      0.00   \n",
+      "149           Zoe Martin                 0.00     29.08    80.99    -80.99   \n",
+      "\n",
+      "     #_of_trans  avg_sale_units  avg_sale_$  %_store_total  \n",
+      "0             1            0.00        0.00           0.00  \n",
+      "1             3           -0.33      -50.00           0.00  \n",
+      "2             2            0.50       72.00           0.00  \n",
+      "3           329            1.58      164.06           1.69  \n",
+      "4             1           -1.00     -199.99          -0.01  \n",
+      "..          ...             ...         ...            ...  \n",
+      "145           1           -1.00     -189.00          -0.01  \n",
+      "146          15            1.87      155.49           0.07  \n",
+      "147         136            1.38      132.46           0.57  \n",
+      "148           1            0.00        0.00           0.00  \n",
+      "149           1           -1.00      -80.99           0.00  \n",
+      "\n",
+      "[150 rows x 9 columns]\n",
       "Matched pattern: SALES\\s+PERFORMANCE\\s+REPORT\\s+Excluding\\s+Tax.*Net\\s*\\$\n",
       "Processing: Sales Performance (Excl. Tax on Net $)\n",
       "None\n",
       "Matched pattern: BEST\\s+SELLERS\\s+REPORT\\s+BY\\s+QUANTITY\n",
       "Processing: Best Sellers by Quantity\n",
-      "None\n",
+      "       style      colour  qty  avg_price     net_$\n",
+      "0     115179       White  104     147.35  15213.96\n",
+      "1     115359       Black  101     168.32  16981.99\n",
+      "2     115359  ClassicNav   94     168.29  15792.06\n",
+      "3     115179       Black   94     144.60  13659.38\n",
+      "4     115179     Natural   92     147.95  13579.09\n",
+      "...      ...         ...  ...        ...       ...\n",
+      "2229  207726    WhiMulti   -1     129.99   -129.99\n",
+      "2230  205083     Fatigue   -1     139.99   -139.99\n",
+      "2231  117864  Navy Multi   -1     199.99   -199.99\n",
+      "2232  119104        Milk   -1     329.99   -329.99\n",
+      "2233  119772   Tan/White   -1     369.99   -369.99\n",
+      "\n",
+      "[2234 rows x 5 columns]\n",
       "Matched pattern: BEST\\s+SELLERS\\s+REPORT\\s+BY\\s+VALUE\n",
       "Processing: Best Sellers by Value\n",
-      "None\n",
+      "       style      colour  qty  avg_price     net_$\n",
+      "0     115359       Black  101     168.32  16981.99\n",
+      "1     115359  ClassicNav   94     168.29  15792.06\n",
+      "2     117434      String   44     360.57  15752.58\n",
+      "3     115179       White  104     147.35  15213.96\n",
+      "4     119110        Sand   37     426.55  15172.91\n",
+      "...      ...         ...  ...        ...       ...\n",
+      "2229  118570       Multi    0     209.49   -180.99\n",
+      "2230  117864  Navy Multi   -1     199.99   -199.99\n",
+      "2231  117923    Beetroot    0     204.49   -290.99\n",
+      "2232  119104        Milk   -1     329.99   -329.99\n",
+      "2233  119772   Tan/White   -1     369.99   -369.99\n",
+      "\n",
+      "[2234 rows x 5 columns]\n",
       "Matched pattern: DAILY\\s+SALES\\s+SUMMARY\\s+REPORT\n",
-      "Processing: Daily Sales Summary\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HP\\OneDrive\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\Webpage\\utils.py:115: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df['date'] = pd.to_datetime(df['date'])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing: Daily Sales Summary\n",
       "      day       date    gross     disc      net   ex_gst\n",
       "0     Sat 2022-04-16  9749.34  2037.00  7712.34  7011.22\n",
       "1     Mon 2022-04-18  4869.74   974.00  3895.74  3541.58\n",
@@ -80,8 +170,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\OneDrive\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\Webpage\\utils.py:75: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  .apply(lambda g: {\n"
+      "c:\\Users\\Siva\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\utils.py:385: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['date'] = pd.to_datetime(df['date'])\n"
      ]
     },
     {
@@ -130,7 +220,15 @@
       "[4072 rows x 10 columns]\n",
       "Matched pattern: SALES\\s+BY\\s+CATEGORY\\s+REPORT\n",
       "Processing: Sales by Category\n",
-      "None\n",
+      "   description  quantity  gross_sale\n",
+      "0   Womenswear     14100  1850384.62\n",
+      "1     Menswear      7963   881273.58\n",
+      "2     Kidswear      2653   111233.22\n",
+      "3  Accessories       550    31947.70\n",
+      "4         None       149    17613.70\n",
+      "5       zEtail      2584     6000.00\n",
+      "6          zGV         2      278.98\n",
+      "7    Packaging        -1       -0.50\n",
       "Matched pattern: Sales\\s+By\\s+Customer\\s+Report\n",
       "Processing: Sales by Customer\n",
       "           customer       date  qty  sales_gst_inc  sales_gst_exc\n",
@@ -227,17 +325,17 @@
       "20744  Thursday 2025-03-27  Integrated EFTP  D36300038598     Renee   \n",
       "\n",
       "                     time   value  \n",
-      "4     2025-10-25 09:29:00  183.99  \n",
-      "5     2025-10-25 09:33:00  231.98  \n",
-      "6     2025-10-25 09:42:00  159.99  \n",
-      "7     2025-10-25 09:46:00  175.99  \n",
-      "8     2025-10-25 09:53:00  247.98  \n",
+      "4     2026-01-07 09:29:00  183.99  \n",
+      "5     2026-01-07 09:33:00  231.98  \n",
+      "6     2026-01-07 09:42:00  159.99  \n",
+      "7     2026-01-07 09:46:00  175.99  \n",
+      "8     2026-01-07 09:53:00  247.98  \n",
       "...                   ...     ...  \n",
-      "20741 2025-10-25 10:35:00  116.99  \n",
-      "20738 2025-10-25 11:30:00   20.00  \n",
-      "20742 2025-10-25 11:30:00  141.98  \n",
-      "20743 2025-10-25 12:41:00  143.99  \n",
-      "20744 2025-10-25 13:53:00  179.99  \n",
+      "20741 2026-01-07 10:35:00  116.99  \n",
+      "20738 2026-01-07 11:30:00   20.00  \n",
+      "20742 2026-01-07 11:30:00  141.98  \n",
+      "20743 2026-01-07 12:41:00  143.99  \n",
+      "20744 2026-01-07 13:53:00  179.99  \n",
       "\n",
       "[20745 rows x 7 columns]\n",
       "Matched pattern: TENDER\\s+BREAKDOWN\\s+SUMMARY\\s+REPORT\n",
@@ -255,15 +353,14 @@
       "2560   Thursday 2025-03-27       Gift Voucher    20.00\n",
       "2561   Thursday 2025-03-27  Integrated EFTPOS  1048.91\n",
       "\n",
-      "[2562 rows x 4 columns]\n",
-      "It is done - Isu, Those Who Came Before\n"
+      "[2562 rows x 4 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\OneDrive\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\Webpage\\utils.py:297: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "c:\\Users\\Siva\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\utils.py:588: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df['time'] = pd.to_datetime(df['time'], dayfirst=True)\n"
      ]
     }
@@ -307,9 +404,10 @@
     "    else:\n",
     "        print(\"Unknown report type — no handler matched.\")\n",
     "\n",
+    "inputs = []\n",
+    "\n",
     "if automate:\n",
-    "    path = r\"C:\\Users\\HP\\OneDrive\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\Power BI Proj SC FS BM\\25 03 27\"\n",
-    "    reports = []\n",
+    "    path = r\"C:\\Users\\Siva\\Documents\\GitHub\\Power-BI-Tutorial-MS-Press\\Power BI Proj SC FS BM\\25 03 27 Full Report Set\"\n",
     "\n",
     "    try:\n",
     "        if not os.path.exists(path):\n",
@@ -322,20 +420,20 @@
     "        for filename in txt_files:\n",
     "            file_path = os.path.join(path, filename)\n",
     "            with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "                reports.append(f.read())\n",
+    "                inputs.append(f.read())\n",
     "\n",
-    "        print(f\"✅ Loaded {len(reports)} reports successfully.\")\n",
+    "        print(f\"✅ Loaded {len(inputs)} reports successfully.\")\n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
+    "        inputs = []  # ensure defined, even after error\n",
     "\n",
     "else:\n",
     "    report = input(\"Paste your report here:\\n\")\n",
+    "    inputs = [report]\n",
     "\n",
-    "# If `reports` exists and has items, process them; otherwise process single `report`\n",
-    "for text in (reports if ('reports' in locals() and reports) else [report]):\n",
-    "    process_report(text)\n",
-    "\n",
-    "print(\"It is done - Isu, Those Who Came Before\")"
+    "for text in inputs:\n",
+    "    process_report(text)\n"
    ]
   }
  ],
@@ -355,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
